fixed logo nav size, alignment

--- a/assignments/designinmotion/style.css
+++ b/assignments/designinmotion/style.css
@@ -16,10 +16,11 @@
 
 #topNavLogo{
     display: flex;
-    height: 40px;
+    height: 8vh;
     order: 0;
-    padding-top: 15px;
-    padding-left: 15px;
+    padding-top: 2vh;
+    padding-left: 2vh;
+    align-self: center;
     
     } 
 
